# hidamari

./: .gitignore  .gitmodules  Makefile  README.md  meson.build  pyproject.toml
data/: io.github.jeffshee.Hidamari.appdata.xml.in
docs/: dev.md
pkgs/flatpak/: generate-pypi-deps.sh  io.github.jeffshee.Hidamari.json  pypi-deps.json  vlc.json
po/: POTFILES  hidamari.pot  ja.po
src/: hidamari.in  meson.build
src/hidamari/: __main__.py  commons.py  menu.py  monitor.py  server.py  utils.py
src/hidamari/assets/: control.ui
src/hidamari/gui/: control.py  gui_utils.py
src/hidamari/player/: base_player.py  video_player.py  web_player.py  x11_surface.py  x11_window.py
